--- a/polymer-filters.html
+++ b/polymer-filters.html
@@ -1,7 +1,7 @@
 <script src="poly-filters.js"></script>
 
 <!--
-A collection of filters for formatting values of [Polymer expressions](http://www.polymer-project.org/docs/polymer/expressions.html) for display to users.
+A collection of filters for formatting values of Polymer 1.x.x templates for display to users.
 
 ### Examples
 
@@ -228,6 +228,6 @@ A collection of filters for formatting values of [Polymer expressions](http://ww
 
 @element polymer-filters
 @blurb A collection of Polymer filters for formatting values of expressions for display to users
-@homepage http://github.com/addyosmani/polymer-filters
-@inspiration http://jinja.pocoo.org/docs/templates/
+@homepage http://github.com/eumendoza/polymer-filters
+@inspiration http://github.com/addyosmani/polymer-filters
 -->
