--- a/polymer-filters.html
+++ b/polymer-filters.html
@@ -226,7 +226,7 @@ A collection of filters for formatting values of Polymer 1.x.x templates for dis
 
 > null
 
-@element polymer-filters
+@element polymer-efilters
 @blurb A collection of Polymer filters for formatting values of expressions for display to users
 @homepage http://github.com/eumendoza/polymer-filters
 @inspiration http://github.com/addyosmani/polymer-filters
